# opentelemetry-exporter-python

./: .flake8  .gitchangelog.rc  .gitignore  .isort.cfg  CHANGELOG.md  Makefile  README.md  RELEASING.md  dev-requirements.txt  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: tracer.py
src/opentelemetry/ext/lightstep/: __init__.py  api_client.py  reporter.py  util.py  version.py
src/opentelemetry/ext/lightstep/metrics/: __init__.py
src/opentelemetry/ext/lightstep/protobuf/: collector_pb2.py  metrics_pb2.py
tests/: test_api_client.py  test_trace_exporter.py
tests/metrics/: test_metrics_exporter.py
